# subtext-wallet

./: README.md  next.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/: route.ts
app/api/ai/agents/: agents.ts  checkpointer.ts  generalInfo.ts  route.ts  supervisor.ts  tools.ts
app/api/wallet/: balance.ts  create.ts  export.ts  supported-tokens.ts  transfer.ts  xcm-bridge.ts
components/: request-access-modal.tsx
components/ui/: dev-component.tsx
erc20/contract/: Cargo.toml  lib.rs  script.sh
prisma/: schema.prisma
