[package]
name = "erc20 Token"
version = "5.1.0"
authors = ["Rocio Ferreiro <rocio.m.ferreiro@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "5.1.0", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.1.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []